# detour

./: Cargo.toml  README.md  detour.service
benches/: blocklist_bench.rs  dns_proxy.rs  transport_bench.rs
src/: cache.rs  dns.rs  lib.rs  main.rs  proxy.rs  resolver.rs  stats.rs
src/filter/: blocklist.rs  domains.txt  lists_generated.rs  mod.rs
src/filter/lists/: Adaway.txt  AdguardDNS.txt  Easyprivacy.txt  Phishing_army_blocklist_extended.txt
src/transport/: mod.rs  tcp.rs  udp.rs
