[package]
name = "detour"
version = "0.1.0"
edition = "2021"
description = "Performance focused DNS proxy"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "net", "io-util", "sync", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "test-util", "time"] }

