[package]
name = "detour"
version = "0.1.0"
edition = "2024"
description = "Performance focused DNS proxy"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = [
    "rt",
    "net",
    "io-util",
    "sync",
    "macros",
    "rt-multi-thread",
    "time",
] }
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.9"

[[bench]]
name = "transport_bench"
harness = false

[[bench]]
name = "blocklist_bench"
harness = false
